--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,17 @@ h3 {
     color: #41464b;
 }
 
+.btn-blue {
+    border-color: #34c6d3;
+    color: #34c6d3;
+}
+
+.btn-blue:hover,
+.btn-blue:focus {
+    background-color: #34c6d3;
+    color: #fff;
+}
+
 
 /*======================================
     ANIMATE
@@ -186,4 +197,37 @@ h3 {
 .service-item-description p {
     margin: 0;
     padding-left: 85px;
+}
+
+
+/*======================================
+    ABOUT
+========================================*/
+
+#about-content-box {
+    float: left;
+    height: 700px;
+}
+
+#about-content-box-outer {
+    width: 100%;
+    height: 100%;
+    display: table;
+}
+
+#about-content-box-inner {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#about .content-title h3 {
+    text-align: left;
+}
+
+#about .content-title-underline {
+    margin: 0 0 30px 0;
+}
+
+#about-desc p {
+    margin-bottom: 30px;
 }
