--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,15 @@ h3 {
     ABOUT
 ========================================*/
 
+#about-bg-diagonal {
+    width: 60%;
+    height: 700px;
+    float: right;
+    background-image: url(../img/bg-about.jpg);
+    border-left: 200px solid #fff;
+    border-top: 700px solid transparent;
+}
+
 #about-content-box {
     float: left;
     height: 700px;
