--- a/css/style.css
+++ b/css/style.css
@@ -240,3 +240,26 @@ h3 {
 #about-desc p {
     margin-bottom: 30px;
 }
+
+
+/*======================================
+    WORK
+========================================*/
+
+.row.no-gutters [class*=col-] {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.img-wrapper {
+    overflow: hidden;
+}
+
+.img-wrapper img {
+    transition: transform .5s ease;
+}
+
+.img-wrapper img:hover {
+    transform: scale(1.5);
+    cursor: zoom-in;
+}
