--- a/css/style.css
+++ b/css/style.css
@@ -134,18 +134,22 @@ h3 {
 #home-cover,
 #home-heading,
 #home-btn {
+    -webkit-animation-duration: .5s;
     animation-duration: .5s;
 }
 
 #home-cover {
+    -webkit-animation-delay: .1s;
     animation-delay: .1s;
 }
 
 #home-heading {
+    -webkit-animation-delay: .5s;
     animation-delay: .5s;
 }
 
 #home-btn {
+    -webkit-animation-delay: 1s;
     animation-delay: 1s;
 }
 
@@ -270,11 +274,18 @@ h3 {
 }
 
 .img-wrapper img {
+    -webkit-transition: -webkit-transform .5s ease;
+    transition: -webkit-transform .5s ease;
+    -o-transition: transform .5s ease;
     transition: transform .5s ease;
+    transition: transform .5s ease, -webkit-transform .5s ease;
 }
 
 .img-wrapper img:hover {
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
     transform: scale(1.5);
+    cursor: -webkit-zoom-in;
     cursor: zoom-in;
 }
 
@@ -616,6 +627,8 @@ form .form-control {
 
 .navbar {
     padding: 20px 0;
+    -webkit-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
 }
 
